--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "plugins": [
     "transform-class-properties",
     "transform-decorators-legacy",
+    ["transform-runtime", { "polyfill": false }],
     [
       "import",
       {
