--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   "dependencies": {
     "antd": "^2.13.0",
     "babel-plugin-import": "^1.4.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
+    "graphql-tag": "^2.4.2",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
