--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-import": "^1.4.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
+    "bignumber.js": "^4.0.4",
     "css-loader": "^0.28.7",
     "graphql-tag": "^2.4.2",
     "jquery": "^3.2.1",
@@ -42,6 +43,7 @@
     "react-apollo": "^1.4.15",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.1.1",
     "react-redux": "^5.0.6",
     "react-router": "3.*",
     "react-router-redux": "^4.0.8",
