--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "bignumber.js": "^4.0.4",
     "css-loader": "^0.28.7",
     "graphql-tag": "^2.4.2",
-    "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "prop-types": "^15.5.10",
@@ -54,7 +53,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "toastr": "^2.1.2"
+    "style-loader": "^0.18.2"
   }
 }
